spacing issue fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -264,6 +264,16 @@ footer .copyright {
 
 
 /* Mobile */
+@media (max-width: 440px) {
+    header h1 {
+        font-size: 3em;
+    }
+}
+@media (min-width: 441px) and (max-width: 550px) {
+    header h1 {
+        font-size: 4em;
+    }
+}
 @media (max-width: 550px) {
     body {
         overflow-x: hidden;
@@ -299,9 +309,6 @@ footer .copyright {
         margin-left: auto;
         margin-right: auto;
         text-align: center;
-    }
-    header h1 {
-        font-size: 4em;
     }
     header h2 {
         font-size: 1.5em;
